[package]
name = "RustGOL"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.10.0"
rayon = "1.6.1"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "testing"
path = "src/bin/testing.rs"

[[bin]]
name = "2"
path = "src/bin/2.rs"

[[bin]]
name = "3"
path = "src/bin/3.rs"